<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.iatsoftware</groupId>
    <artifactId>iat-parent</artifactId>
    <version>1.0.2</version>
    <packaging>pom</packaging>
    <name>IAT Application Parent</name>
    <description>The parent project for the IAT Server Application</description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
    </properties>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
        <relativePath></relativePath>
    </parent>
    <organization>
        <name>IAT Software</name>
        <url>http://iatsoftware.net</url>
    </organization>
    <repositories>
        <repository>
            <id>spring-releases</id>
            <name>spring.snapshots</name>
            <url>https://repo.spring.io/release</url>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>daily</updatePolicy>
                <checksumPolicy>fail</checksumPolicy>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <layout>default</layout>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>spring-releases</id>
            <name>spring.releases</name>
            <url>http://repo.spring.io/release</url>
        </pluginRepository>	
    </pluginRepositories>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <releases>
                            <release>17</release>
                        </releases>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <modules>
        <module>iat-webcontent</module>
        <module>iat-webapp</module>
    </modules>
</project>
    
